--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,19 @@
 html, body{
     height: 100%;
     background: var(--color);
+    margin: 0;
 }
+
+#Video{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    z-index: -1;
+}
+
 
 main-header{
     display: flex;
@@ -38,9 +50,18 @@ img.img2{
 
 h1{
     margin: 0;
-    font-size: 65px;
+    font-size: 85px;
     padding: 15px;
     padding-left: 0;
+    color: var(--text-color);
+    filter: drop-shadow(0 1px 3px var(--text-color));
+}
+
+.h1_work{
+    margin: 0;
+    font-size: 65px;
+    padding: 15px;
+    padding-top: 65px;
     color: var(--text-color);
     filter: drop-shadow(0 1px 3px var(--text-color));
 }
@@ -94,11 +115,14 @@ body{
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-gap: 15px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 165px;
 }
 
 .grid_item{
-    background-color: rgb(150, 137, 217);
+    border: 2px solid var(--text-color);
     color: var(--text-color);
 
 }
@@ -113,7 +137,7 @@ h2{
 .profile{
     justify-content: center;
     text-align: center;
-    /* margin: 5 auto; */
+    margin: 5 auto;
     
 }
 
@@ -126,7 +150,7 @@ h2{
 }
 
 p{
-    padding: 50px;
+    padding: 5px;
     color: var(--text-color);
     filter: drop-shadow(0 1px 3px);
 }
